Scientific Functions Added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core : ^2.25.4
   cloud_firestore: ^4.15.4
   http: ^1.2.0
+  decimal: ^2.3.3
 
 dev_dependencies:
   flutter_test:
