--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: calculator
-description: A calculator app.
+description: Your math companion
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -41,6 +41,8 @@ dependencies:
   http: ^1.2.0
   decimal: ^2.3.3
   auto_size_text: ^3.0.0
+  package_info_plus: ^5.0.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
